Scrolltable fix
When content in table cells overflowed it messed up the column widths between
the .scrolltable_header and the .scrolltable_body.  Overflow is hidden and
handled now.

--- a/nimsgears/public/css/scrolltable.css
+++ b/nimsgears/public/css/scrolltable.css
@@ -23,6 +23,10 @@
     overflow:auto;
 }
 
+.scrolltable_body table
+{
+    table-layout:fixed;
+}
 
 .scrolltable_flat
 {
@@ -33,8 +37,9 @@
 .scrolltable_header th, .scrolltable_body td, #floating td
 {
     border:1px solid white;
+    overflow:hidden;
+    white-space:nowrap;
 }
-
 
 tr.stripe.ui-selected, tr.ui-selected
 {
